# class-26

./: .gitignore  CMakeLists.txt  derivative.cxx  heat_eqn.cxx  kdv.cxx  kdv.ipynb  mpi_dl_test.cxx  mpi_domain.h  mpi_message.cxx  plot.gpl  plot_wave.gpl  test_derivative.cxx  test_integration.cxx  test_mpi.cxx  wave_equation.cxx  wave_equation.h  wave_equation.ipynb  wtime.h
omp/: CMakeLists.txt  test_message.cxx  test_openmp.cxx
